# Humanoid-Motion-Reconstruction

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
bench/: quality_gate.py  run_bench.sh
humanoid_motion_recon/: birdseye_video.py  collate_mesh_video.py  collate_video.py  depth_video.py  export_soma_bvh.py  fit_pose.py  gpurender.py  ground_qpos.py  import_soma_csv.py  lift_mesh.py  lift_skeleton.py  mesh_world_video.py  pose_over_cloud.py  pose_video.py  recon3d_video.py  recon_check_video.py  sam2d_video.py  sam3d_dummy_video.py  sam3d_mesh_video.py  stabilize_depth.py
